--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 <p>Thank you for visiting my portfolio. Let's create something amazing together!</p>
             </div>
             <div class="footer-links">
-                <!-- <a href="https://github.com/Youssef-Mohamd"><i class="fab fa-github"></i></a> -->
-                <a href="https://www.linkedin.com/in/mazen-tarek-mel?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="fab fa-linkedin-in"></i></a>
+              
+                <a href="https://www.linkedin.com/in/mazen-tarek-mel?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"  target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="copyright">
                 <p>&copy; Youssef Mohamed. All Rights Reserved.</p>
